--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,38 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --font-color: 0, 0, 0;
+    /*--foreground-rgb: 255, 255, 255;*/
+    --background-rgb: 246, 248, 252;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+    :root {
+        --font-color: 255, 255, 255;
+        /*--foreground-rgb: 40, 41, 42;*/
+        --background-rgb: 31, 31, 31;
+    }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    color: rgb(var(--font-color));
+    background: rgb(var(--background-rgb));
+    min-height: 100vh;
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    .text-balance {
+        /*text-wrap: balance;*/
+    }
+}
+
+.StatusBarIcon {
+    background-color: #252525;
+    border-radius: 50%;
+    height: 32px;
+    width: 32px;
+    font-size: 10px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
 }
