--- a/app/homepage.css
+++ b/app/homepage.css
@@ -863,6 +863,16 @@ a {
     z-index: 1;
 }
 
+/* section 4 */
+.section-4 {
+    background-color: #0d1116;
+    color: #fff;
+    width: 100vw;
+    padding-right: 160px;
+    padding-left: 160px;
+    z-index: 1;
+}
+
 /* section 3 */
 .section-3 {
     background-color: #0d1116;
@@ -892,7 +902,6 @@ a {
     background-color: #161b22;
     border: 1px solid #30363d;
     border-radius: 10px;
-    font-family: '__Inter_9c9965', '__Inter_Fallback_9c9965', serif;
 }
 
 .backend-flow {
