--- a/app/homepage.css
+++ b/app/homepage.css
@@ -854,7 +854,7 @@ a {
 
 /* section 2 */
 .section-2 {
-    background-color: #0d1116;
+    background-color: #18181b;
     color: #fff;
     width: 100vw;
     padding: 20px 160px;
@@ -865,7 +865,7 @@ a {
 
 /* section 4 */
 .section-4 {
-    background-color: #0d1116;
+    background-color: #18181b;
     color: #fff;
     width: 100vw;
     padding-right: 160px;
@@ -875,7 +875,7 @@ a {
 
 /* section 3 */
 .section-3 {
-    background-color: #0d1116;
+    background-color: #18181b;
     color: #fff;
     width: 100vw;
     margin: 0;
@@ -899,9 +899,9 @@ a {
     padding: 20px 40px;
     margin: 20px 30px;
     width: calc(100% - 30px);
-    background-color: #161b22;
+    /*background-color: #161b22;*/
     border: 1px solid #30363d;
-    border-radius: 10px;
+    border-radius: 30px;
 }
 
 .backend-flow {
