--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 6rem 6rem 0 6rem;
-    min-height: 100vh;
+    /*padding: 6rem 6rem 0 6rem;*/
+    /*min-height: 100vh;*/
 }
 
 .description {
@@ -116,12 +116,12 @@
     margin-left: -400px;
 }
 
-.center::after {
-    background: var(--primary-glow);
-    width: 240px;
-    height: 180px;
-    z-index: -1;
-}
+/*.center::after {*/
+/*    background: var(--primary-glow);*/
+/*    width: 240px;*/
+/*    height: 180px;*/
+/*    z-index: -1;*/
+/*}*/
 
 .center::before,
 .center::after {
@@ -211,7 +211,7 @@
 
     .grid {
         grid-template-columns: 1fr;
-        margin-bottom: 120px;
+        /*margin-bottom: 120px;*/
         max-width: 320px;
         text-align: center;
     }
